--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AP'
 - !lcsh 'English wit and humor -- Periodicals'
+- GITenberg
 title: Punch, or the London Charivari, Vol. 107 July 7, 1894, by Various
 url: http://www.gutenberg.org/ebooks/39951
